--- a/src/main/resources/assets/fnafmod/lang/en_us.json
+++ b/src/main/resources/assets/fnafmod/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.fnafmod.titanium_ingot": "Titanium Ingot"
+  "item.fnafmod.titanium_ingot": "Titanium Ingot",
+  "item.fnafmod.titanium_nugget": "Titanium Nugget",
+  "item.fnafmod.raw_titanium": "Raw Titanium"
 }
