Added Food Tomato Added Smart Blow Torch

--- a/src/main/resources/assets/fnafmod/lang/en_us.json
+++ b/src/main/resources/assets/fnafmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.fnafmod.titanium_ingot": "Titanium Ingot",
   "item.fnafmod.titanium_nugget": "Titanium Nugget",
   "item.fnafmod.raw_titanium": "Raw Titanium",
+  "item.fnafmod.tomato": "Tomato",
 
   "block.fnafmod.titanium_block": "Titanium Block",
   "block.fnafmod.titanium_ore": "Titanium Ore",
