--- a/src/main/resources/assets/fnafmod/lang/en_us.json
+++ b/src/main/resources/assets/fnafmod/lang/en_us.json
@@ -3,6 +3,9 @@
   "item.fnafmod.titanium_nugget": "Titanium Nugget",
   "item.fnafmod.raw_titanium": "Raw Titanium",
   "item.fnafmod.tomato": "Tomato",
+  "item.fnafmod.smart_blow_torch": "Smart Blow Torch",
+  "item.fnafmod.coal_coke": "Coal Coke",
+
 
   "block.fnafmod.titanium_block": "Titanium Block",
   "block.fnafmod.titanium_ore": "Titanium Ore",
