help me I cant stop working on this

--- a/src/main/resources/assets/fnafmod/lang/en_us.json
+++ b/src/main/resources/assets/fnafmod/lang/en_us.json
@@ -17,6 +17,8 @@
   "item.fnafmod.titanium_leggings": "Titanium Leggings",
   "item.fnafmod.titanium_boots": "Titanium Boots",
 
+  "item.fnafmod.titanium_horse_armor": "Titanium Horse Armor",
+
   "block.fnafmod.titanium_block": "Titanium Block",
   "block.fnafmod.titanium_ore": "Titanium Ore",
 
